--- a/tp6/mycalc/hie.yaml
+++ b/tp6/mycalc/hie.yaml
@@ -1,9 +1,9 @@
 cradle:
   cabal:
     - path: "./src"
-      component: lib:arithm
-    - path: "./app/arithm"
-      component: exe:arithm
+      component: lib:mycalc
+    - path: "./app"
+      component: exe:mycalc
     - path: "./test"
       component: test:spec
 
