--- a/tp-concurrent/game-local/game.cabal
+++ b/tp-concurrent/game-local/game.cabal
@@ -7,7 +7,7 @@ license:            MIT
 common deps
     ghc-options:        -Wall -O
     default-language:   Haskell2010
-    build-depends:      base
+    build-depends:      base, gloss
 
 library
     import:             deps
@@ -18,5 +18,5 @@ executable game
     import:             deps
     hs-source-dirs:     app
     main-is:            Main.hs
-    build-depends:      game, gloss
+    build-depends:      game
 
