--- a/projets/game/game.cabal
+++ b/projets/game/game.cabal
@@ -7,7 +7,7 @@ license:            MIT
 common deps
     ghc-options:        -Wall -O
     default-language:   Haskell2010
-    build-depends:      base, bytestring, stm, text, websockets
+    build-depends:      base, bytestring, gloss, stm, text, websockets
 
 library
     import:             deps
