--- a/tp-database/webmusic/webmusic.cabal
+++ b/tp-database/webmusic/webmusic.cabal
@@ -9,7 +9,8 @@ common deps
     default-language:   Haskell2010
     build-depends:      base, lucid, scotty, text, text-show, wai-extra,
                         selda, selda-sqlite,
-                        sqlite-simple, postgresql-simple
+                        sqlite-simple
+                        -- , postgresql-simple
                         -- , selda-postgresql
 
 library
@@ -17,7 +18,7 @@ library
     hs-source-dirs:     src
     exposed-modules:    View
                         DbSqliteSimple DbSeldaSqlite
-                        DbSeldaPostgresql DbPostgresqlSimple
+                        -- DbSeldaPostgresql DbPostgresqlSimple
 
 executable webmusic
     import:             deps
